--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <p class="lead mt-4 mb-5 wow fadeInDown">Jeżeli jesteś niepełnoletni - opuść tę stronę.</p>
                         </li>
                         <li>
-                            <a target="_blank" href="#" class="btn btn-success btn-lg wow fadeInLeft" data-wow-delay="0.2s" rel="nofollow">Wchodzę, mam 18 lat.</a>
+                            <a target="_blank" href="index2.html" class="btn btn-success btn-lg wow fadeInLeft" data-wow-delay="0.2s" rel="nofollow">Wchodzę, mam 18 lat.</a>
                             <a target="_blank" href="#" class="btn btn-danger btn-lg wow fadeInRight" data-wow-delay="0.2s" rel="nofollow">Opuszczam stronę.</a>
                         </li>
                     </ul>
@@ -60,36 +60,6 @@
 
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
-
-    <!--Google Maps-->
-    <script src="https://maps.google.com/maps/api/js"></script>
-
-    <script>
-        function init_map() {
-
-            var var_location = new google.maps.LatLng(40.725118, -73.997699);
-
-            var var_mapoptions = {
-                center: var_location,
-
-                zoom: 14
-            };
-
-            var var_marker = new google.maps.Marker({
-                position: var_location,
-                map: var_map,
-                title: "New York"
-            });
-
-            var var_map = new google.maps.Map(document.getElementById("map-container"),
-                var_mapoptions);
-
-            var_marker.setMap(var_map);
-
-        }
-
-        google.maps.event.addDomListener(window, 'load', init_map);
-    </script>
 
     <!-- Animations init-->
     <script>
