--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Material Design Bootstrap</title>
+    <title>Venus Lux - Twoja wyjątkowa randka</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -169,6 +169,14 @@
 
     <!--Venus Lux Content-->
     <div class="container">
+        <h1>Randki w pobiżu miejscowości: <span class="badge pink">Chrzanów</span></h1>
+        <h3>Szukaj w innych miastach
+          <a href="#"><span class="badge cyan">Kraków</span></a>
+          <a href="#"><span class="badge amber darken-2">Katowice</span></a>
+          <a href="#"><span class="badge red">Tychy</span></a>
+          <a href="#"><span class="badge purple darken-2">Oświęcim</span></a>
+          <a href="#"><span class="badge indigo">Nowy Sącz</span></a>
+        </h3>
         <div class="row my-5">
             <!--First columnn-->
             <div class="col-lg-4">
@@ -206,7 +214,7 @@
                         <h4 class="card-title">Namiętna Teresa, 18 lat</h4>
                         <!--Text-->
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-pink">Umów się!</a>
+                        <a href="#" class="btn btn-pink">Umów się</a>
                     </div>
 
                 </div>
@@ -308,6 +316,200 @@
     </div>
     <!--/.Content-->
 
+    <section class="jumbotron text-center venus-jumbo">
+        <div class="container">
+              <h1 class="jumbotron-heading">Czekamy na Ciebie!</h1>
+              <p class="lead">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+              <p>
+                <a href="#" class="btn btn-pink">Znajdź kobietę</a>
+                <a href="#" class="btn btn-secondary">Znajdź mężczyznę</a>
+              </p>
+        </div>
+    </section>
+
+    <section class="anons-all">
+      <div class="container">
+        <div class="row my-5">
+            <!--First columnn-->
+            <div class="col-lg-3">
+                <!--Card-->
+                <div class="card wow fadeIn" data-wow-delay="0.2s">
+
+                    <!--Card image-->
+                    <img class="img-fluid" src="img/anons_4.jpg" alt="Card image cap">
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h4 class="card-title"> Monika, 20 lat</h4>
+                        <!--Text-->
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-pink">Umów się!</a>
+                    </div>
+
+                </div>
+                <!--/.Card-->
+            </div>
+            <!--First columnn-->
+
+            <!--Second columnn-->
+            <div class="col-lg-3">
+                <!--Card-->
+                <div class="card wow fadeIn" data-wow-delay="0.4s">
+
+                    <!--Card image-->
+                    <img class="img-fluid" src="img/anons_5.jpg" alt="Card image cap">
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h4 class="card-title"> Teresa, 18 lat</h4>
+                        <!--Text-->
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-pink">Umów się!</a>
+                    </div>
+
+                </div>
+                <!--/.Card-->
+
+            </div>
+            <!--Second columnn-->
+
+            <!--Third columnn-->
+            <div class="col-lg-3 mb-4">
+                <!--Card-->
+                <div class="card wow fadeIn" data-wow-delay="0.6s">
+
+                    <!--Card image-->
+                    <img class="img-fluid" src="img/anons_6.jpg" alt="Card image cap">
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h4 class="card-title">Ponętna Jola, 40 lat</h4>
+                        <!--Text-->
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-pink">Umów się!</a>
+                    </div>
+
+                </div>
+                <!--/.Card-->
+            </div>
+            <!--Third columnn-->
+            <!--Fourth columnn-->
+            <div class="col-lg-3 mb-4">
+                <!--Card-->
+                <div class="card wow fadeIn" data-wow-delay="0.6s">
+
+                    <!--Card image-->
+                    <img class="img-fluid" src="img/anons_6.jpg" alt="Card image cap">
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h4 class="card-title">Ponętna Jola, 40 lat</h4>
+                        <!--Text-->
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-pink">Umów się!</a>
+                    </div>
+
+                </div>
+                <!--/.Card-->
+            </div>
+            <!--Fourth columnn-->
+        </div>
+        <div class="row my-5">
+            <!--First columnn-->
+            <div class="col-lg-3">
+                <!--Card-->
+                <div class="card wow fadeIn" data-wow-delay="0.2s">
+
+                    <!--Card image-->
+                    <img class="img-fluid" src="img/anons_4.jpg" alt="Card image cap">
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h4 class="card-title"> Monika, 20 lat</h4>
+                        <!--Text-->
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-pink">Umów się!</a>
+                    </div>
+
+                </div>
+                <!--/.Card-->
+            </div>
+            <!--First columnn-->
+
+            <!--Second columnn-->
+            <div class="col-lg-3">
+                <!--Card-->
+                <div class="card wow fadeIn" data-wow-delay="0.4s">
+
+                    <!--Card image-->
+                    <img class="img-fluid" src="img/anons_5.jpg" alt="Card image cap">
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h4 class="card-title"> Teresa, 18 lat</h4>
+                        <!--Text-->
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-pink">Umów się!</a>
+                    </div>
+
+                </div>
+                <!--/.Card-->
+
+            </div>
+            <!--Second columnn-->
+
+            <!--Third columnn-->
+            <div class="col-lg-3 mb-4">
+                <!--Card-->
+                <div class="card wow fadeIn" data-wow-delay="0.6s">
+
+                    <!--Card image-->
+                    <img class="img-fluid" src="img/anons_6.jpg" alt="Card image cap">
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h4 class="card-title">Ponętna Jola, 40 lat</h4>
+                        <!--Text-->
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-pink">Umów się!</a>
+                    </div>
+
+                </div>
+                <!--/.Card-->
+            </div>
+            <!--Third columnn-->
+            <!--Fourth columnn-->
+            <div class="col-lg-3 mb-4">
+                <!--Card-->
+                <div class="card wow fadeIn" data-wow-delay="0.6s">
+
+                    <!--Card image-->
+                    <img class="img-fluid" src="img/anons_6.jpg" alt="Card image cap">
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <!--Title-->
+                        <h4 class="card-title">Ponętna Jola, 40 lat</h4>
+                        <!--Text-->
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-pink">Umów się!</a>
+                    </div>
+
+                </div>
+                <!--/.Card-->
+            </div>
+            <!--Fourth columnn-->
+        </div>
+      </div>
+    </section>
+
 
     <!--Footer-->
     <footer class="page-footer center-on-small-only">
@@ -376,13 +578,13 @@
 
         <!--Call to action-->
         <div class="call-to-action">
-            <h4 class="mb-5">Material Design for Bootstrap</h4>
+            <h4 class="mb-5"><img src="img/venuslux_logo.png" alt=""></h4>
             <ul>
                 <li>
-                    <h5>Get our UI KIT for free</h5>
+                    <h5>Poznawaj nowe Panie każdego dnia! Zapisz się do newslettera</h5>
                 </li>
-                <li><a target="_blank" href="https://mdbootstrap.com/getting-started/" class="btn btn-info" rel="nofollow">Sign up!</a></li>
-                <li><a target="_blank" href="https://mdbootstrap.com/material-design-for-bootstrap/" class="btn btn-default" rel="nofollow">Learn more</a></li>
+                <li><a target="_blank" href="#" class="btn btn-info" rel="nofollow">Zapisz!</a></li>
+                <li><a target="_blank" href="#" class="btn btn-default" rel="nofollow">Więcej</a></li>
             </ul>
         </div>
         <!--/.Call to action-->
@@ -390,7 +592,7 @@
         <!--Copyright-->
         <div class="footer-copyright">
             <div class="container-fluid">
-                © 2015 Copyright: <a href="https://www.MDBootstrap.com"> MDBootstrap.com </a>
+                © 2017 Copyright: <a href="#"> Venus Lux </a>
 
             </div>
         </div>
