--- a/index2.html
+++ b/index2.html
@@ -187,7 +187,7 @@
         </h3>
         <div class="row my-5">
             <!--First columnn-->
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-6">
                 <!--Card-->
                 <div class="card wow fadeIn" data-wow-delay="0.2s">
 
@@ -209,7 +209,7 @@
             <!--First columnn-->
 
             <!--Second columnn-->
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-6">
                 <!--Card-->
                 <div class="card wow fadeIn" data-wow-delay="0.4s">
 
@@ -232,7 +232,7 @@
             <!--Second columnn-->
 
             <!--Third columnn-->
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-6">
                 <!--Card-->
                 <div class="card wow fadeIn" data-wow-delay="0.6s">
 
@@ -255,7 +255,7 @@
         </div>
         <div class="row my-5">
             <!--First columnn-->
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-6">
                 <!--Card-->
                 <div class="card wow fadeIn" data-wow-delay="0.2s">
 
@@ -277,7 +277,7 @@
             <!--First columnn-->
 
             <!--Second columnn-->
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-6">
                 <!--Card-->
                 <div class="card wow fadeIn" data-wow-delay="0.4s">
 
@@ -300,7 +300,7 @@
             <!--Second columnn-->
 
             <!--Third columnn-->
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-6">
                 <!--Card-->
                 <div class="card wow fadeIn" data-wow-delay="0.6s">
 
