creating other pages

--- a/index2.html
+++ b/index2.html
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="kobiety.html">Kobiety</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Mężczyźni</a>
+                        <a class="nav-link" href="men.html">Mężczyźni</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pary</a>
@@ -252,9 +252,7 @@
                 <!--/.Card-->
             </div>
             <!--Third columnn-->
-        </div>
-        <div class="row my-5">
-            <!--First columnn-->
+            <!--Fourth columnn-->
             <div class="col-sm-4 col-6">
                 <!--Card-->
                 <div class="card wow fadeIn" data-wow-delay="0.2s">
@@ -274,9 +272,8 @@
                 </div>
                 <!--/.Card-->
             </div>
-            <!--First columnn-->
-
-            <!--Second columnn-->
+            <!--Fourth columnn-->
+            <!--Fifth columnn-->
             <div class="col-sm-4 col-6">
                 <!--Card-->
                 <div class="card wow fadeIn" data-wow-delay="0.4s">
@@ -297,9 +294,8 @@
                 <!--/.Card-->
 
             </div>
-            <!--Second columnn-->
-
-            <!--Third columnn-->
+            <!--Fifth columnn-->
+            <!--Sisth columnn-->
             <div class="col-sm-4 col-6">
                 <!--Card-->
                 <div class="card wow fadeIn" data-wow-delay="0.6s">
@@ -319,8 +315,10 @@
                 </div>
                 <!--/.Card-->
             </div>
-            <!--Third columnn-->
+            <!--Fisth columnn-->
+
         </div>
+
     </div>
     <!--/.Content-->
 
@@ -339,7 +337,7 @@
         <div class="container">
             <div class="row my-5">
                 <!--First columnn-->
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-6">
                     <!--Card-->
                     <div class="card wow fadeIn" data-wow-delay="0.2s">
 
@@ -361,7 +359,7 @@
                 <!--First columnn-->
 
                 <!--Second columnn-->
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-6">
                     <!--Card-->
                     <div class="card wow fadeIn" data-wow-delay="0.4s">
 
@@ -384,7 +382,7 @@
                 <!--Second columnn-->
 
                 <!--Third columnn-->
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-6">
                     <!--Card-->
                     <div class="card wow fadeIn" data-wow-delay="0.6s">
 
@@ -405,7 +403,7 @@
                 </div>
                 <!--Third columnn-->
                 <!--Fourth columnn-->
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-6">
                     <!--Card-->
                     <div class="card wow fadeIn" data-wow-delay="0.6s">
 
@@ -425,10 +423,117 @@
                     <!--/.Card-->
                 </div>
                 <!--Fourth columnn-->
+                <!--Fifth columnn-->
+                <div class="col-sm-3 col-6">
+                    <!--Card-->
+                    <div class="card wow fadeIn" data-wow-delay="0.2s">
+
+                        <!--Card image-->
+                        <img class="img-fluid" src="img/anons_4.jpg" alt="Card image cap">
+
+                        <!--Card content-->
+                        <div class="card-body">
+                            <!--Title-->
+                            <h4 class="card-title"> Monika, 20 lat</h4>
+                            <!--Text-->
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-pink">Umów się!</a>
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Fifth columnn-->
+                <!--Sixth columnn-->
+                <div class="col-sm-3 col-6">
+                    <!--Card-->
+                    <div class="card wow fadeIn" data-wow-delay="0.4s">
+
+                        <!--Card image-->
+                        <img class="img-fluid" src="img/anons_5.jpg" alt="Card image cap">
+
+                        <!--Card content-->
+                        <div class="card-body">
+                            <!--Title-->
+                            <h4 class="card-title"> Teresa, 18 lat</h4>
+                            <!--Text-->
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-pink">Umów się!</a>
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+
+                </div>
+                <!--Sixth columnn-->
+                <!--Seventh columnn-->
+                <div class="col-sm-3 col-6">
+                    <!--Card-->
+                    <div class="card wow fadeIn" data-wow-delay="0.6s">
+
+                        <!--Card image-->
+                        <img class="img-fluid" src="img/anons_6.jpg" alt="Card image cap">
+
+                        <!--Card content-->
+                        <div class="card-body">
+                            <!--Title-->
+                            <h4 class="card-title">Ponętna Jola, 40 lat</h4>
+                            <!--Text-->
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-pink">Umów się!</a>
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Seventh columnn-->
+                <!--Eight columnn-->
+                <div class="col-sm-3 col-6">
+                    <!--Card-->
+                    <div class="card wow fadeIn" data-wow-delay="0.6s">
+
+                        <!--Card image-->
+                        <img class="img-fluid" src="img/anons_7.jpg" alt="Card image cap">
+
+                        <!--Card content-->
+                        <div class="card-body">
+                            <!--Title-->
+                            <h4 class="card-title">Ponętna Jola, 40 lat</h4>
+                            <!--Text-->
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-pink">Umów się!</a>
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Eight columnn-->
+
             </div>
+
+            <!-- Advertisement Row -->
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <img class="img-fluid" src="img/advert.jpg" alt="advert">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <img class="img-fluid" src="img/advert.jpg" alt="advert">
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- Advertisement Row End -->
+
+            <!-- Venus second anons row  -->
             <div class="row my-5">
                 <!--First columnn-->
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-6">
                     <!--Card-->
                     <div class="card wow fadeIn" data-wow-delay="0.2s">
 
@@ -450,7 +555,7 @@
                 <!--First columnn-->
 
                 <!--Second columnn-->
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-6">
                     <!--Card-->
                     <div class="card wow fadeIn" data-wow-delay="0.4s">
 
@@ -473,7 +578,7 @@
                 <!--Second columnn-->
 
                 <!--Third columnn-->
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-6">
                     <!--Card-->
                     <div class="card wow fadeIn" data-wow-delay="0.6s">
 
@@ -494,7 +599,7 @@
                 </div>
                 <!--Third columnn-->
                 <!--Fourth columnn-->
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-6">
                     <!--Card-->
                     <div class="card wow fadeIn" data-wow-delay="0.6s">
 
@@ -514,7 +619,113 @@
                     <!--/.Card-->
                 </div>
                 <!--Fourth columnn-->
+                <!--Fifth columnn-->
+                <div class="col-sm-3 col-6">
+                    <!--Card-->
+                    <div class="card wow fadeIn" data-wow-delay="0.2s">
+
+                        <!--Card image-->
+                        <img class="img-fluid" src="img/anons_4.jpg" alt="Card image cap">
+
+                        <!--Card content-->
+                        <div class="card-body">
+                            <!--Title-->
+                            <h4 class="card-title"> Monika, 20 lat</h4>
+                            <!--Text-->
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-pink">Umów się!</a>
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Fifth columnn-->
+                <!--Sixth columnn-->
+                <div class="col-sm-3 col-6">
+                    <!--Card-->
+                    <div class="card wow fadeIn" data-wow-delay="0.4s">
+
+                        <!--Card image-->
+                        <img class="img-fluid" src="img/anons_5.jpg" alt="Card image cap">
+
+                        <!--Card content-->
+                        <div class="card-body">
+                            <!--Title-->
+                            <h4 class="card-title"> Teresa, 18 lat</h4>
+                            <!--Text-->
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-pink">Umów się!</a>
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+
+                </div>
+                <!--Sixth columnn-->
+                <!--Seventh columnn-->
+                <div class="col-sm-3 col-6">
+                    <!--Card-->
+                    <div class="card wow fadeIn" data-wow-delay="0.6s">
+
+                        <!--Card image-->
+                        <img class="img-fluid" src="img/anons_6.jpg" alt="Card image cap">
+
+                        <!--Card content-->
+                        <div class="card-body">
+                            <!--Title-->
+                            <h4 class="card-title">Ponętna Jola, 40 lat</h4>
+                            <!--Text-->
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-pink">Umów się!</a>
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Seventh columnn-->
+                <!--Eight columnn-->
+                <div class="col-sm-3 col-6">
+                    <!--Card-->
+                    <div class="card wow fadeIn" data-wow-delay="0.6s">
+
+                        <!--Card image-->
+                        <img class="img-fluid" src="img/anons_7.jpg" alt="Card image cap">
+
+                        <!--Card content-->
+                        <div class="card-body">
+                            <!--Title-->
+                            <h4 class="card-title">Ponętna Jola, 40 lat</h4>
+                            <!--Text-->
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-pink">Umów się!</a>
+                        </div>
+
+                    </div>
+                    <!--/.Card-->
+                </div>
+                <!--Eight columnn-->
+
             </div>
+            <!-- Venus second anons row  -->
+
+
+            <!-- Advertisement Row -->
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <img class="img-fluid" src="img/advert_2.jpg" alt="advert">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <img class="img-fluid" src="img/advert_2.jpg" alt="advert">
+                    </div>
+
+                </div>
+
+            </div>
+            <!-- Advertisement Row End -->
+
         </div>
     </section>
 
