--- a/couple.html
+++ b/couple.html
@@ -39,14 +39,14 @@
                     <li class="nav-item">
                         <a href="page.html" class="nav-link">Simple Page</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="kobiety.html">Kobiety</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="men.html">Mężczyźni</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pary</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="couple.html">Pary</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">LGBT</a>
@@ -82,7 +82,7 @@
             <!--Page heading-->
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="h1-responsive"><span class="badge pink">Kobiety</span>
+                    <h1 class="h1-responsive"><span class="badge pink">Pary</span>
                         <small class="text-muted">Randki w swojej okolicy </small>
                     </h1>
                     <h3>Szukaj w poblizu:
@@ -124,7 +124,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.2s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_4.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -146,7 +146,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.4s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_5.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -169,7 +169,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.6s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_6.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -190,7 +190,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.6s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_7.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -211,7 +211,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.2s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_4.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -232,7 +232,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.4s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_5.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -254,7 +254,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.6s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_6.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -275,7 +275,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.6s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_7.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -296,7 +296,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.6s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_10.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -317,7 +317,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.6s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_12.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -338,7 +338,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.6s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_7.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -359,7 +359,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.6s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_8.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -380,7 +380,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.6s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_9.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -401,7 +401,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.6s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_10.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -422,7 +422,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.6s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_11.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
@@ -443,7 +443,7 @@
                         <div class="card wow fadeIn" data-wow-delay="0.6s">
 
                             <!--Card image-->
-                            <img class="img-fluid" src="img/anons_12.jpg" alt="Card image cap">
+                            <img class="img-fluid" src="img/anons_14.jpg" alt="Card image cap">
 
                             <!--Card content-->
                             <div class="card-body">
