--- a/page.html
+++ b/page.html
@@ -80,7 +80,7 @@
     <section class="main venus-simple-page">
 
         <div class="container">
-            <div class="d-flex justify-content-center">//Magme// This is a page template. This background is just temporary. @TO DO To change it, go -> _custom.scss -> Simple Page </div>
+            <div class="d-flex justify-content-center">//Magme// This is a page template. @TO DO To change stylesheets, go -> _custom.scss -> Simple Page </div>
         </div>
     </section>
 
