adding javascript to single page

--- a/couple.html
+++ b/couple.html
@@ -55,7 +55,7 @@
                         <a class="nav-link" href="#">Striptiz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link job-link" href="#">Oferty Pracy</a>
+                        <a class="nav-link job-link" href="oferty.html">Oferty Pracy</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav pull-right cart-menu">
