--- a/single.html
+++ b/single.html
@@ -56,7 +56,7 @@
                         <a class="nav-link" href="#">Striptiz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link job-link" href="#">Oferty Pracy</a>
+                        <a class="nav-link job-link" href="oferty.html">Oferty Pracy</a>
                     </li>
 
                 </ul>
@@ -221,6 +221,26 @@
                 </div>
                 <!-- Venus Slideshow Gallery -->
                 <div class="col-lg-3">
+                    <!-- Rating Card -->
+                    <div class="card">
+                        <h2 class="card-header primary-color white-text"><span class="lnr lnr-star"></span> Oceń mnie</h2>
+                        <div class="card-body">
+                            <fieldset class="rating">
+                                <input type="radio" id="star5" name="rating" value="5" /><label class="full" for="star5" title="Awesome - 5 stars"></label>
+                                <input type="radio" id="star4half" name="rating" value="4 and a half" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
+                                <input type="radio" id="star4" name="rating" value="4" /><label class="full" for="star4" title="Pretty good - 4 stars"></label>
+                                <input type="radio" id="star3half" name="rating" value="3 and a half" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
+                                <input type="radio" id="star3" name="rating" value="3" /><label class="full" for="star3" title="Meh - 3 stars"></label>
+                                <input type="radio" id="star2half" name="rating" value="2 and a half" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
+                                <input type="radio" id="star2" name="rating" value="2" /><label class="full" for="star2" title="Kinda bad - 2 stars"></label>
+                                <input type="radio" id="star1half" name="rating" value="1 and a half" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
+                                <input type="radio" id="star1" name="rating" value="1" /><label class="full" for="star1" title="Sucks big time - 1 star"></label>
+                                <input type="radio" id="starhalf" name="rating" value="half" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
+                            </fieldset>
+                        </div>
+                    </div>
+                    <!-- End Rating Card -->
+
                     <!-- Dossier Card -->
                     <div class="card">
                         <h2 class="card-header primary-color white-text"><span class="lnr lnr-diamond"></span> Dossier</h2>
@@ -260,6 +280,7 @@
             <div class="venus-space"></div>
 
             <!-- Advertisement Row -->
+            <hr>
             <div class="row">
                 <div class="col-md-12">Reklama</div>
                 <div class="col-md-6">
@@ -275,10 +296,112 @@
                 </div>
 
             </div>
+            <hr>
             <!-- Advertisement Row End -->
 
-        </div>
+            <!-- Customer List -->
+            <h3> <span class="badge pink">Opinie klientów:</span> </h3>
+            <div class="card customer-list">
+                <div class="card-body">
+                    <div class="media">
+                        <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
+                        <div class="media-body">
+                            <h5 class="mt-0">
+                                <strong>Janusz Silonręki</strong>
+                                <span class="venus-verify-user">
+                                    <span class="lnr lnr-checkmark-circle"></span>Zweryfikowany uytkownik</span>
+                            </h5>
+                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card customer-list">
+                <div class="card-body">
+                    <div class="media">
+                        <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
+                        <div class="media-body">
+                            <h5 class="mt-0">
+                                <strong>Janusz Silonręki</strong>
+                                <span class="venus-verify-user">
+                                    <span class="lnr lnr-checkmark-circle"></span> Zweryfikowany uytkownik</span>
+                            </h5>
+                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card customer-list">
+                <div class="card-body">
+                    <div class="media">
+                        <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
+                        <div class="media-body">
+                            <h5 class="mt-0">
+                                <strong>Janusz Silonręki</strong>
+                                <span class="venus-verify-user">
+                                    <span class="lnr lnr-checkmark-circle"></span> Zweryfikowany uytkownik</span>
+                            </h5>
+                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card customer-list">
+                <div class="card-body">
+                    <div class="media">
+                        <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
+                        <div class="media-body">
+                            <h5 class="mt-0">
+                                <strong>Janusz Silonręki</strong>
+                                <span class="venus-verify-user">
+                                    <span class="lnr lnr-checkmark-circle"></span> Zweryfikowany uytkownik</span>
+                            </h5>
+                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card customer-list">
+                <div class="card-body">
+                    <div class="media">
+                        <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
+                        <div class="media-body">
+                            <h5 class="mt-0">
+                                <strong>Janusz Silonręki</strong>
+                                <span class="venus-verify-user">
+                                    <span class="lnr lnr-checkmark-circle"></span> Zweryfikowany uytkownik</span>
+                            </h5>
+                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card customer-list">
+                <div class="card-body">
+                    <div class="media">
+                        <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
+                        <div class="media-body">
+                            <h5 class="mt-0">
+                                <strong>Janusz Silonręki</strong>
+                                <span class="venus-verify-user">
+                                    <span class="lnr lnr-checkmark-circle"></span> Zweryfikowany uytkownik</span>
+                            </h5>
+                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <a href="" class="btn btn-pink" id="loadMore">Zobacz więcej</a>
+            </div>
+            <!-- End Customer List -->
+        </div>
     </section>
     <!-- Single body -->
 
