--- a/index2.html
+++ b/index2.html
@@ -56,7 +56,7 @@
                         <a class="nav-link" href="#">Striptiz</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link job-link" href="#">Oferty Pracy</a>
+                        <a class="nav-link job-link" href="oferty.html">Oferty Pracy</a>
                     </li>
 
                 </ul>
