--- a/oferty.html
+++ b/oferty.html
@@ -24,8 +24,9 @@
 
 <body>
 
+
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar venus-non-transparent-nav">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
         <div class="container">
             <a class="navbar-brand venus-logo-brand wow fadeInLeft" href="index.html"><img src="img/venuslux_logo.png" claheight="30" class="d-inline-block align-top" alt="Venus Lux Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,17 +34,17 @@
                 </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="index2.html">Strona Główna <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a href="page.html" class="nav-link">Simple Page</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="kobiety.html">Kobiety</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Mężczyźni</a>
+                        <a class="nav-link" href="men.html">Mężczyźni</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pary</a>
@@ -57,6 +58,7 @@
                     <li class="nav-item">
                         <a class="nav-link job-link" href="oferty.html">Oferty Pracy</a>
                     </li>
+
                 </ul>
                 <ul class="nav navbar-nav pull-right cart-menu">
                     <li class="nav-item anons-item">
@@ -65,7 +67,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact" data-toggle="modal" data-target="#loginForm"><span class="lnr lnr-user"></span> Twoje konto</a>
+                        <a class="nav-link" href="#contact" data-toggle="modal" data-target="#modalLRForm"><span class="lnr lnr-user"></span> Twoje konto</a>
                     </li>
 
                     <li class="nav-item hidden-xs-down"><a href="#" class="nav-link" data-toggle="modal" data-target="#searchOnSite"><span class="lnr lnr-magnifier"></span></a></li>
@@ -76,13 +78,6 @@
     </nav>
     <!--/.Navbar-->
 
-
-    <section class="main venus-simple-page">
-
-        <div class="container">
-            <div class="d-flex justify-content-center">//Magme// This is a page template. @TO DO To change stylesheets, go -> _custom.scss -> Simple Page </div>
-        </div>
-    </section>
 
 
     <!--Footer-->
@@ -175,6 +170,8 @@
     <!--/.Footer-->
 
 
+
+
     <!-- Modal Wyszukiwarka -->
 
     <!-- Modal -->
@@ -200,56 +197,123 @@
     <!-- /. Modal wyszukiwarka -->
 
 
+
     <!-- Modal Twoje konto -->
-    <div class="modal fade bd-example-modal-sm" id="loginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+
+    <div class="modal fade" id="modalLRForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog cascading-modal" role="document">
             <!--Content-->
             <div class="modal-content">
-                <div class="row">
-                    <div class="col-sm-6 hidden-xs-down">
-                        <img src="img/login_form_img.jpg" class="img-fluid" alt="">
-                    </div>
-                    <div class="col-sm-6">
-                        <!--Header-->
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            <h4 class="modal-title text-sm-center" id="myModalLabel"> Panel Klienta</h4>
-                        </div>
-                        <!--Body-->
-                        <div class="modal-body">
-                            <div class="form-intro">
-                                <p>Zaloguj się do sklepu używająć swojego loginu lub e-maila.</p>
-                            </div>
-                            <div class="md-form">
-                                <span class="lnr lnr-user prefix"></span>
-                                <input type="text" id="form2" class="form-control">
-                                <label for="form2">Podaj login lub adres e-mail</label>
-                            </div>
-                            <div class="md-form">
-                                <span class="lnr lnr-lock prefix"></span>
-                                <input type="password" id="form3" class="form-control">
-                                <label for="form3">Twoje hasło</label>
-                            </div>
-                            <div>
-                                <button type="button" class="btn btn-secondary btn-pink" data-dismiss="modal">Zaloguj</button>
-                            </div>
-                        </div>
 
-                        <!--Footer-->
-                        <div class="modal-footer form-register">
-                            <p>Nie masz konta? Zarejestruj się <a href="register.html"><span class="lnr lnr-arrow-right"></span> tutaj</a></p>
-                            <p>Nie pamiętasz hasła? Kliknij <a href="forget.html"><span class="lnr lnr-arrow-right"></span> tutaj</a></p>
+                <!--Modal cascading tabs-->
+                <div class="modal-c-tabs">
+
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs tabs-2 white" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" data-toggle="tab" href="#panel7" role="tab">
+                                <span class="lnr lnr-user"></span> Zaloguj</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#panel8" role="tab">
+                                <span class="lnr lnr-users"></span> Rejestracja</a>
+                        </li>
+                    </ul>
+
+                    <!-- Tab panels -->
+                    <div class="tab-content">
+                        <!--Panel 7-->
+                        <div class="tab-pane fade in show active" id="panel7" role="tabpanel">
+
+                            <!--Body-->
+                            <div class="modal-body mb-1">
+                                <div class="md-form form-sm">
+                                    <i class="fa fa-envelope prefix"></i>
+                                    <input type="text" id="form22" class="form-control">
+                                    <label for="form22">Twój mail</label>
+                                </div>
+
+                                <div class="md-form form-sm">
+                                    <i class="fa fa-lock prefix"></i>
+                                    <input type="password" id="form23" class="form-control">
+                                    <label for="form23">Wpisz hasło</label>
+                                </div>
+                                <div class="text-center mt-2">
+                                    <button class="btn btn-pink">Zaloguj
+                                            <i class="fa fa-sign-in ml-1"></i>
+                                        </button>
+                                </div>
+                            </div>
+                            <!--Footer-->
+                            <div class="modal-footer display-footer">
+                                <div class="options text-center text-md-right mt-1">
+                                    <p>Nie masz konta?
+                                        <a href="#" class="blue-text">Zarejestruj się</a>
+                                    </p>
+                                    <p>Zapomniałeś
+                                        <a href="#" class="blue-text">Hasła?</a>
+                                    </p>
+                                </div>
+                                <button type="button" class="btn btn-outline-pink waves-effect ml-auto" data-dismiss="modal">Zamknij</button>
+                            </div>
+
                         </div>
+                        <!--/.Panel 7-->
+
+                        <!--Panel 8-->
+                        <div class="tab-pane fade" id="panel8" role="tabpanel">
+
+                            <!--Body-->
+                            <div class="modal-body">
+                                <div class="md-form form-sm">
+                                    <i class="fa fa-envelope prefix"></i>
+                                    <input type="text" id="form24" class="form-control">
+                                    <label for="form24">Twój e-mail</label>
+                                </div>
+
+                                <div class="md-form form-sm">
+                                    <i class="fa fa-lock prefix"></i>
+                                    <input type="password" id="form25" class="form-control">
+                                    <label for="form25">Wpisz hasło</label>
+                                </div>
+
+                                <div class="md-form form-sm">
+                                    <i class="fa fa-lock prefix"></i>
+                                    <input type="password" id="form26" class="form-control">
+                                    <label for="form26">Powtórz hasło</label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="panel8">
+                                    <label class="form-check-label" for="exampleCheck1">Oświadczam, iz jestem pełnoletni/a i zapoznałem się z <a href="#">Regulaminem</a</label>
+                                </div>
+
+
+                                <div class="text-center form-sm mt-2">
+                                    <button class="btn btn-pink">Rejestracja
+                                            <i class="fa fa-sign-in ml-1"></i>
+                                        </button>
+                                </div>
+
+                            </div>
+                            <!--Footer-->
+                            <div class="modal-footer">
+                                <div class="options text-right">
+                                    <p class="pt-1">Masz juz konto?
+                                        <a href="#" class="blue-text">Zaloguj</a>
+                                    </p>
+                                </div>
+                                <button type="button" class="btn btn-outline-pink waves-effect ml-auto" data-dismiss="modal">Zamknij</button>
+                            </div>
+                        </div>
+                        <!--/.Panel 8-->
                     </div>
+
                 </div>
-
             </div>
             <!--/.Content-->
         </div>
     </div>
-
     <!-- Modal Twoje konto End -->
 
 
@@ -267,8 +331,12 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
 
+    <script type="text/javascript" src="js/js-magme-custom-min.js"></script>
+
     <script>
         new WOW().init();
     </script>
 
 </body>
+
+</html>
