extra features main page

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
                     <ul>
                         <li class="wow fadeInUp"><img src="img/venuslux_logo.png" class="img-fluid mx-auto d-block" alt="venus lux logo" width="<25></25>0px"></li>
                         <li>
-                            <h2 class="h2-responsive wow fadeInDown" data-wow-delay="0.2s">Uwaga! Strona zawiera treści erotyczne.</h2></li>
+                            <h2 class="h2-responsive wow fadeInDown" data-wow-delay="0.2s">Uwaga! Strona zawiera treści erotyczne.</h2>
+                        </li>
                         <li>
                             <p class="lead mt-4 mb-5 wow fadeInDown">Jeżeli jesteś niepełnoletni - opuść tę stronę.</p>
                         </li>
                         <li>
-                            <a target="_blank" href="index2.html" class="btn btn-success btn-lg wow fadeInLeft" data-wow-delay="0.2s" rel="nofollow">Wchodzę, mam 18 lat.</a>
+                            <a href="index2.html" class="btn btn-success btn-lg wow fadeInLeft" data-wow-delay="0.2s" rel="nofollow">Wchodzę, mam 18 lat.</a>
                             <a target="_blank" href="#" class="btn btn-danger btn-lg wow fadeInRight" data-wow-delay="0.2s" rel="nofollow">Opuszczam stronę.</a>
                         </li>
                     </ul>
