--- a/oferty.html
+++ b/oferty.html
@@ -26,7 +26,7 @@
 
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar venus-non-transparent-nav">
         <div class="container">
             <a class="navbar-brand venus-logo-brand wow fadeInLeft" href="index.html"><img src="img/venuslux_logo.png" claheight="30" class="d-inline-block align-top" alt="Venus Lux Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,6 +78,138 @@
     </nav>
     <!--/.Navbar-->
 
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <!--Section: Job-->
+                <section class="py-4 job-header">
+                    <div class="job-container">
+                        <!--Section heading-->
+                        <h2 class="h1 text-center mb-5"><span class="badge pink">Oferty pracy</span></h2>
+                        <!--Section description-->
+                        <p class="text-center">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <div class="row py-4">
+                            <div class="col-md-6 d-flex justify-content-center">
+                                <div class="md-form job-search text-left">
+                                    <input type="text" class="input-alternate" placeholder="Wyszukaj ofertę">
+                                    <button type="button" class="btn btn-unique">Znajdź</button>
+                                </div>
+                            </div>
+                            <div class="col-md-6 d-flex justify-content-center">
+                                <div class="add-job">
+                                    <h3 class="text-center">Twoja oferta pracy</h3>
+                                    <button type="button" class="btn btn-pink ">Dodaj ofertę</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!--Grid column-->
+                        <div class="col-lg-12 col-xl-12 ml-xl-12 mb-4">
+                            <h3 class="mb-3 font-bold dark-grey-text">
+                                <strong>Praca dla Pań w Hamburgu</strong>
+                            </h3>
+                            <p class="grey-text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis debitis aut rerum.</p>
+                            <p>by
+                                <a class="font-bold dark-grey-text">Jessica Clark</a>, 26/08/2018</p>
+                            <a class="btn btn-primary btn-pink">Wiecej</a>
+                        </div>
+                        <!--Grid column-->
+
+                    </div>
+                    <!--Grid row-->
+
+                    <hr class="mb-5">
+
+                    <!--Grid row-->
+                    <div class="row mt-3">
+
+
+                        <!--Grid column-->
+                        <div class="col-lg-12 col-xl-12 ml-xl-12 mb-4">
+                            <h3 class="mb-3 font-bold dark-grey-text">
+                                <strong>Praca dla Pań w Hamburgu</strong>
+                            </h3>
+                            <p class="grey-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident et dolorum fuga.</p>
+                            <p>by
+                                <a class="font-bold dark-grey-text">Jessica Clark</a>, 24/08/2018</p>
+                            <a class="btn btn-primary btn-pink">Więcej</a>
+                        </div>
+                        <!--Grid column-->
+
+                    </div>
+                    <!--Grid row-->
+
+                    <hr class="mb-5">
+
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!--Grid column-->
+                        <div class="col-lg-12 col-xl-12 ml-xl-12 mb-4">
+                            <h3 class="mb-3 font-bold dark-grey-text">
+                                <strong>Praca dla Pań w Hamburgu</strong>
+                            </h3>
+                            <p class="grey-text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur.
+                            </p>
+                            <p>by
+                                <a class="font-bold dark-grey-text">Jessica Clark</a>, 21/08/2018</p>
+                            <a class="btn btn-primary btn-pink">Więcej</a>
+                        </div>
+                        <!--Grid column-->
+
+                    </div>
+                    <!--Grid row-->
+                    <hr class="mb-5">
+
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!--Grid column-->
+                        <div class="col-lg-12 col-xl-12 ml-xl-12 mb-4">
+                            <h3 class="mb-3 font-bold dark-grey-text">
+                                <strong>Praca dla Pań w Hamburgu</strong>
+                            </h3>
+                            <p class="grey-text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur.
+                            </p>
+                            <p>by
+                                <a class="font-bold dark-grey-text">Jessica Clark</a>, 21/08/2018</p>
+                            <a class="btn btn-primary btn-pink">Więcej</a>
+                        </div>
+                        <!--Grid column-->
+
+                    </div>
+                    <!--Grid row-->
+                    <hr class="mb-5">
+
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!--Grid column-->
+                        <div class="col-lg-12 col-xl-12 ml-xl-12 mb-4">
+                            <h3 class="mb-3 font-bold dark-grey-text">
+                                <strong>Praca dla Pań w Hamburgu</strong>
+                            </h3>
+                            <p class="grey-text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur.
+                            </p>
+                            <p>by
+                                <a class="font-bold dark-grey-text">Jessica Clark</a>, 21/08/2018</p>
+                            <a class="btn btn-primary btn-pink">Więej</a>
+                        </div>
+                        <!--Grid column-->
+
+                    </div>
+                    <!--Grid row-->
+
+                </section>
+                <!--Section: Blog v.3-->
+            </div>
+        </div>
+    </div>
 
 
     <!--Footer-->
