--- a/single.html
+++ b/single.html
@@ -276,12 +276,24 @@
             </div>
 
             <br>
-
-            <div class="venus-space"></div>
-
-            <!-- Advertisement Row -->
-            <hr>
             <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <h2 class="card-header primary-color white-text"><span class="lnr lnr-map-marker"></span> Dojazd</h2>
+                        <div class="card-body">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2557.1781947091213!2d19.398640615569903!3d50.13909821763134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716eeb2a70434c3%3A0xaab46d330d34e5a3!2sAleja+Henryka%2C+Chrzan%C3%B3w!5e0!3m2!1spl!2spl!4v1515931440146"
+                                width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+                        </div>
+                    </div>
+                </div>
+                <br>
+
+                <div class="venus-space"></div>
+
+                <!-- Advertisement Row -->
+                <hr>
+
                 <div class="col-md-12">Reklama</div>
                 <div class="col-md-6">
                     <div class="card">
@@ -295,113 +307,123 @@
 
                 </div>
 
-            </div>
-            <hr>
-            <!-- Advertisement Row End -->
 
-            <!-- Customer List -->
-            <h3> <span class="badge pink">Opinie klientów:</span> </h3>
-            <div class="card customer-list">
-                <div class="card-body">
-                    <div class="media">
-                        <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
-                        <div class="media-body">
-                            <h5 class="mt-0">
-                                <strong>Janusz Silonręki</strong>
-                                <span class="venus-verify-user">
+                <hr>
+                <!-- Advertisement Row End -->
+
+                <!-- Customer List -->
+                <div class="col-md-12">
+                    <h3 class="text-center"> <span class="badge pink">Opinie klientów:</span></h3>
+                    <p class="text-center"> <span class="verify-customer-lead">*Wyłącznie dla zweryfikowanych kont</span></p>
+                    <!-- Button trigger Opinion -->
+                    <div class="d-flex justify-content-center">
+                        <button type="button" class="btn btn-pink" data-toggle="modal" data-target="#addOpinion"><span class="lnr lnr-bubble"></span>
+                Dodaj opinię </button>
+                    </div>
+                    <!-- End Button trigger Opinion -->
+                    <hr>
+                    <div class="card customer-list">
+                        <div class="card-body">
+                            <div class="media">
+                                <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
+                                <div class="media-body">
+                                    <h5 class="mt-0">
+                                        <strong>Janusz Silonręki</strong>
+                                        <span class="venus-verify-user">
                                     <span class="lnr lnr-checkmark-circle"></span>Zweryfikowany uytkownik</span>
-                            </h5>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                    </h5>
+                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="card customer-list">
-                <div class="card-body">
-                    <div class="media">
-                        <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
-                        <div class="media-body">
-                            <h5 class="mt-0">
-                                <strong>Janusz Silonręki</strong>
-                                <span class="venus-verify-user">
+                    <div class="card customer-list">
+                        <div class="card-body">
+                            <div class="media">
+                                <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
+                                <div class="media-body">
+                                    <h5 class="mt-0">
+                                        <strong>Janusz Silonręki</strong>
+                                        <span class="venus-verify-user">
                                     <span class="lnr lnr-checkmark-circle"></span> Zweryfikowany uytkownik</span>
-                            </h5>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                    </h5>
+                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="card customer-list">
-                <div class="card-body">
-                    <div class="media">
-                        <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
-                        <div class="media-body">
-                            <h5 class="mt-0">
-                                <strong>Janusz Silonręki</strong>
-                                <span class="venus-verify-user">
+                    <div class="card customer-list">
+                        <div class="card-body">
+                            <div class="media">
+                                <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
+                                <div class="media-body">
+                                    <h5 class="mt-0">
+                                        <strong>Janusz Silonręki</strong>
+                                        <span class="venus-verify-user">
                                     <span class="lnr lnr-checkmark-circle"></span> Zweryfikowany uytkownik</span>
-                            </h5>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                    </h5>
+                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="card customer-list">
-                <div class="card-body">
-                    <div class="media">
-                        <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
-                        <div class="media-body">
-                            <h5 class="mt-0">
-                                <strong>Janusz Silonręki</strong>
-                                <span class="venus-verify-user">
+                    <div class="card customer-list">
+                        <div class="card-body">
+                            <div class="media">
+                                <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
+                                <div class="media-body">
+                                    <h5 class="mt-0">
+                                        <strong>Janusz Silonręki</strong>
+                                        <span class="venus-verify-user">
                                     <span class="lnr lnr-checkmark-circle"></span> Zweryfikowany uytkownik</span>
-                            </h5>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                    </h5>
+                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="card customer-list">
-                <div class="card-body">
-                    <div class="media">
-                        <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
-                        <div class="media-body">
-                            <h5 class="mt-0">
-                                <strong>Janusz Silonręki</strong>
-                                <span class="venus-verify-user">
+                    <div class="card customer-list">
+                        <div class="card-body">
+                            <div class="media">
+                                <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
+                                <div class="media-body">
+                                    <h5 class="mt-0">
+                                        <strong>Janusz Silonręki</strong>
+                                        <span class="venus-verify-user">
                                     <span class="lnr lnr-checkmark-circle"></span> Zweryfikowany uytkownik</span>
-                            </h5>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                    </h5>
+                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="card customer-list">
-                <div class="card-body">
-                    <div class="media">
-                        <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
-                        <div class="media-body">
-                            <h5 class="mt-0">
-                                <strong>Janusz Silonręki</strong>
-                                <span class="venus-verify-user">
+                    <div class="card customer-list">
+                        <div class="card-body">
+                            <div class="media">
+                                <img class="d-flex mr-3 avatar-customer img-fluid z-depth-1 rounded-circle" src="img/avatar_klient.png" alt="Klient">
+                                <div class="media-body">
+                                    <h5 class="mt-0">
+                                        <strong>Janusz Silonręki</strong>
+                                        <span class="venus-verify-user">
                                     <span class="lnr lnr-checkmark-circle"></span> Zweryfikowany uytkownik</span>
-                            </h5>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                    </h5>
+                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <div class="d-flex justify-content-center">
+                        <a href="" class="btn btn-pink" id="loadMore">Zobacz więcej</a>
+                    </div>
                 </div>
+                <!-- End Customer List -->
             </div>
-            <div class="d-flex justify-content-center">
-                <a href="" class="btn btn-pink" id="loadMore">Zobacz więcej</a>
-            </div>
-            <!-- End Customer List -->
-        </div>
     </section>
     <!-- Single body -->
 
@@ -640,6 +662,40 @@
         </div>
     </div>
     <!-- Modal Twoje konto End -->
+
+
+    <!-- Modal Dodaj Opinie -->
+    <div class="modal fade" id="addOpinion" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content venus-add-opinion-content">
+                <div class="modal-header pink white-text venus-add-opinion">
+                    <h4 class="title">
+                        <i class="fa fa-pencil"></i> Dodaj opinie</h4>
+                    <button type="button" class="close waves-effect waves-light" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="md-form form-sm">
+                        <i class="fa fa-user prefix"></i>
+                        <input type="text" id="form19" class="form-control">
+                        <label for="form19">Twój login</label>
+                    </div>
+
+                    <div class="md-form form-sm">
+                        <i class="fa fa-pencil prefix"></i>
+                        <textarea type="text" id="form8" class="md-textarea mb-0"></textarea>
+                        <label for="form8">Twoja opinia</label>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
+                    <button type="button" class="btn btn-pink">Prześlij opinie</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Modal Dodaj opinie -->
 
 
     <!-- SCRIPTS -->
