--- a/oferty.html
+++ b/oferty.html
@@ -18,7 +18,7 @@
 
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/mdb.css">
+    <link rel="stylesheet" href="sass/mdb.css">
 
 </head>
 
@@ -60,9 +60,9 @@
                     </li>
 
                 </ul>
-                <ul class="nav navbar-nav pull-right cart-menu">
+                <ul class="nav navbar-nav pull-right user-top-menu">
                     <li class="nav-item anons-item">
-                        <a href="" class="nav-link">
+                        <a href="user.html" class="nav-link">
                             <span class="lnr lnr-plus-circle"></span> Dodaj Anons
                         </a>
                     </li>
