--- a/single.html
+++ b/single.html
@@ -18,7 +18,7 @@
 
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/mdb.css">
+    <link rel="stylesheet" href="sass/mdb.css">
 
 </head>
 
@@ -60,7 +60,7 @@
                     </li>
 
                 </ul>
-                <ul class="nav navbar-nav pull-right cart-menu">
+                <ul class="nav navbar-nav pull-right user-top-menu">
                     <li class="nav-item anons-item">
                         <a href="" class="nav-link">
                             <span class="lnr lnr-plus-circle"></span> Dodaj Anons
@@ -123,12 +123,12 @@
                         <div class="card-body">
                             <!--Usługi-->
                             <h3 class="card-title">
-                                <a href="#"><span class="badge cyan">Sex</span></a>
-                                <a href="#"><span class="badge amber darken-2">Anal</span></a>
-                                <a href="#"><span class="badge red">Oral</span></a>
+                                <a href="#"><span class="badge purple darken-2">Sex</span></a>
+                                <a href="#"><span class="badge purple darken-2">Anal</span></a>
+                                <a href="#"><span class="badge purple darken-2">Oral</span></a>
                                 <a href="#"><span class="badge purple darken-2">Pieszczoty</span></a>
-                                <a href="#"><span class="badge indigo">Masaz</span></a>
-                                <a href="#"><span class="badge pink">Pocałunki</span></a>
+                                <a href="#"><span class="badge purple darken-2">Masaz</span></a>
+                                <a href="#"><span class="badge purple darken-2">Pocałunki</span></a>
                             </h3>
                         </div>
                     </div>
@@ -137,9 +137,9 @@
                         <h2 class="card-header primary-color white-text"><span class="lnr lnr-home"></span> Gdzie?</h2>
                         <div class="card-body">
                             <h3 class="card-title">
-                                <a href="#"><span class="badge cyan">Chrzanów</span></a>
-                                <a href="#"><span class="badge red">Centrum</span></a>
-                                <a href="#"><span class="badge pink">Aleja Henryka</span></a>
+                                <a href="#"><span class="badge purple darken-2">Chrzanów</span></a>
+                                <a href="#"><span class="badge purple darken-2">Centrum</span></a>
+                                <a href="#"><span class="badge purple darken-2">Aleja Henryka</span></a>
                             </h3>
                         </div>
                     </div>
@@ -258,8 +258,8 @@
                     <div class="card">
                         <h2 class="card-header primary-color white-text"><span class="lnr lnr-clock"></span> Godziny</h2>
                         <div class="card-body">
-                            <h3 class="card-title"><span class="badge red">Poniedziałek - Piątek</span></h3>
-                            <h3 class="card-title"><span class="badge cyan"> Od 8:00 do 21:00</span></h3>
+                            <h3 class="card-title"><span class="badge purple darken-2">Poniedziałek Piątek</span></h3>
+                            <h3 class="card-title"><span class="badge purple darken-2"> Od 8:00 do 21:00</span></h3>
 
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                     <div class="card">
                         <h2 class="card-header primary-color white-text"><span class="lnr lnr-gift"></span> Cena</h2>
                         <div class="card-body">
-                            <h3 class="card-title"><span class="badge badge pink">200 zł/ h</span></h3>
+                            <h3 class="card-title"><span class="badge badge purple darken-2">200 zł/ h</span></h3>
                         </div>
                     </div>
                     <!-- End Price Card -->
