--- a/page.html
+++ b/page.html
@@ -58,14 +58,14 @@
                         <a class="nav-link job-link" href="oferty.html">Oferty Pracy</a>
                     </li>
                 </ul>
-                <ul class="nav navbar-nav pull-right cart-menu">
+                <ul class="nav navbar-nav pull-right user-top-menu">
                     <li class="nav-item anons-item">
-                        <a href="" class="nav-link">
+                        <a href="user.html" class="nav-link">
                             <span class="lnr lnr-plus-circle"></span> Dodaj Anons
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact" data-toggle="modal" data-target="#loginForm"><span class="lnr lnr-user"></span> Twoje konto</a>
+                        <a class="nav-link" href="#contact" data-toggle="modal" data-target="#modalLRForm"><span class="lnr lnr-user"></span> Twoje konto</a>
                     </li>
 
                     <li class="nav-item hidden-xs-down"><a href="#" class="nav-link" data-toggle="modal" data-target="#searchOnSite"><span class="lnr lnr-magnifier"></span></a></li>
@@ -80,7 +80,7 @@
     <section class="main venus-simple-page">
 
         <div class="container">
-            <div class="d-flex justify-content-center">//Magme// This is a page template. @TO DO To change stylesheets, go -> _custom.scss -> Simple Page </div>
+            <div class="d-flex justify-content-center">//Magme// This is a page template. @TO DO To change stylesheets, go -> _custom.scss -> Sample Page </div>
         </div>
     </section>
 
@@ -201,55 +201,121 @@
 
 
     <!-- Modal Twoje konto -->
-    <div class="modal fade bd-example-modal-sm" id="loginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+
+    <div class="modal fade" id="modalLRForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog cascading-modal" role="document">
             <!--Content-->
             <div class="modal-content">
-                <div class="row">
-                    <div class="col-sm-6 hidden-xs-down">
-                        <img src="img/login_form_img.jpg" class="img-fluid" alt="">
-                    </div>
-                    <div class="col-sm-6">
-                        <!--Header-->
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            <h4 class="modal-title text-sm-center" id="myModalLabel"> Panel Klienta</h4>
-                        </div>
-                        <!--Body-->
-                        <div class="modal-body">
-                            <div class="form-intro">
-                                <p>Zaloguj się do sklepu używająć swojego loginu lub e-maila.</p>
-                            </div>
-                            <div class="md-form">
-                                <span class="lnr lnr-user prefix"></span>
-                                <input type="text" id="form2" class="form-control">
-                                <label for="form2">Podaj login lub adres e-mail</label>
-                            </div>
-                            <div class="md-form">
-                                <span class="lnr lnr-lock prefix"></span>
-                                <input type="password" id="form3" class="form-control">
-                                <label for="form3">Twoje hasło</label>
-                            </div>
-                            <div>
-                                <button type="button" class="btn btn-secondary btn-pink" data-dismiss="modal">Zaloguj</button>
-                            </div>
-                        </div>
 
-                        <!--Footer-->
-                        <div class="modal-footer form-register">
-                            <p>Nie masz konta? Zarejestruj się <a href="register.html"><span class="lnr lnr-arrow-right"></span> tutaj</a></p>
-                            <p>Nie pamiętasz hasła? Kliknij <a href="forget.html"><span class="lnr lnr-arrow-right"></span> tutaj</a></p>
+                <!--Modal cascading tabs-->
+                <div class="modal-c-tabs">
+
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs tabs-2 white" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" data-toggle="tab" href="#panel7" role="tab">
+                                <span class="lnr lnr-user"></span> Zaloguj</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#panel8" role="tab">
+                                <span class="lnr lnr-users"></span> Rejestracja</a>
+                        </li>
+                    </ul>
+
+                    <!-- Tab panels -->
+                    <div class="tab-content">
+                        <!--Panel 7-->
+                        <div class="tab-pane fade in show active" id="panel7" role="tabpanel">
+
+                            <!--Body-->
+                            <div class="modal-body mb-1">
+                                <div class="md-form form-sm">
+                                    <i class="fa fa-envelope prefix"></i>
+                                    <input type="text" id="form22" class="form-control">
+                                    <label for="form22">Twój mail</label>
+                                </div>
+
+                                <div class="md-form form-sm">
+                                    <i class="fa fa-lock prefix"></i>
+                                    <input type="password" id="form23" class="form-control">
+                                    <label for="form23">Wpisz hasło</label>
+                                </div>
+                                <div class="text-center mt-2">
+                                    <button class="btn btn-pink">Zaloguj
+                                            <i class="fa fa-sign-in ml-1"></i>
+                                        </button>
+                                </div>
+                            </div>
+                            <!--Footer-->
+                            <div class="modal-footer display-footer">
+                                <div class="options text-center text-md-right mt-1">
+                                    <p>Nie masz konta?
+                                        <a href="#" class="blue-text">Zarejestruj się</a>
+                                    </p>
+                                    <p>Zapomniałeś
+                                        <a href="#" class="blue-text">Hasła?</a>
+                                    </p>
+                                </div>
+                                <button type="button" class="btn btn-outline-pink waves-effect ml-auto" data-dismiss="modal">Zamknij</button>
+                            </div>
+
                         </div>
+                        <!--/.Panel 7-->
+
+                        <!--Panel 8-->
+                        <div class="tab-pane fade" id="panel8" role="tabpanel">
+
+                            <!--Body-->
+                            <div class="modal-body">
+                                <div class="md-form form-sm">
+                                    <i class="fa fa-envelope prefix"></i>
+                                    <input type="text" id="form24" class="form-control">
+                                    <label for="form24">Twój e-mail</label>
+                                </div>
+
+                                <div class="md-form form-sm">
+                                    <i class="fa fa-lock prefix"></i>
+                                    <input type="password" id="form25" class="form-control">
+                                    <label for="form25">Wpisz hasło</label>
+                                </div>
+
+                                <div class="md-form form-sm">
+                                    <i class="fa fa-lock prefix"></i>
+                                    <input type="password" id="form26" class="form-control">
+                                    <label for="form26">Powtórz hasło</label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="panel8">
+                                    <label class="form-check-label" for="exampleCheck1">Oświadczam, iz jestem pełnoletni/a i zapoznałem się z <a href="#">Regulaminem</a</label>
+                                </div>
+
+
+                                <div class="text-center form-sm mt-2">
+                                    <button class="btn btn-pink">Rejestracja
+                                            <i class="fa fa-sign-in ml-1"></i>
+                                        </button>
+                                </div>
+
+                            </div>
+                            <!--Footer-->
+                            <div class="modal-footer">
+                                <div class="options text-right">
+                                    <p class="pt-1">Masz juz konto?
+                                        <a href="#" class="blue-text">Zaloguj</a>
+                                    </p>
+                                </div>
+                                <button type="button" class="btn btn-outline-pink waves-effect ml-auto" data-dismiss="modal">Zamknij</button>
+                            </div>
+                        </div>
+                        <!--/.Panel 8-->
                     </div>
+
                 </div>
-
             </div>
             <!--/.Content-->
         </div>
     </div>
-
     <!-- Modal Twoje konto End -->
 
 
